@@ -98,7 +98,11 @@ typedef struct
 
 #    include <Security/SecureTransport.h>
 
-typedef SSLConnectionRef http_tls_t;
+typedef struct				/**** CDSA connection information ****/
+{
+  SSLContextRef		session;	/* CDSA session object */
+  CFArrayRef		certsArray;	/* Certificates array */
+} http_tls_t;
 
 typedef union _cdsa_conn_ref_u		/**** CDSA Connection reference union
 					 **** used to resolve 64-bit casting
